[gd_scene load_steps=13 format=3 uid="uid://dawkm5qux46eg"]

[ext_resource type="Script" uid="uid://brvg1xmmcddau" path="res://Scripts/Player/player.gd" id="1_a3d8c"]
[ext_resource type="Texture2D" uid="uid://dweium05d13j" path="res://Assets/Textures/t_flashlightpattern.png" id="1_uvnfx"]
[ext_resource type="Script" uid="uid://j7drgslv6nak" path="res://Scripts/Inventory/inventory.gd" id="2_dd0ac"]
[ext_resource type="AudioStream" uid="uid://dl3ukvuo40850" path="res://Assets/Sounds/Light Switch Click On Sfx.wav" id="3_htcer"]
[ext_resource type="PackedScene" uid="uid://dy4nhwb87joqq" path="res://Scenes/Weapons/blaster.tscn" id="3_jlvik"]
[ext_resource type="PackedScene" uid="uid://dkh18u2sg55nl" path="res://Scenes/UI/hud.tscn" id="3_xpcdj"]
[ext_resource type="AudioStream" uid="uid://dfro8rrmv8ju" path="res://Assets/Sounds/Footsteps/01-footstep.ogg" id="4_mtuoh"]
[ext_resource type="PackedScene" uid="uid://t13qlaue6ohv" path="res://Scenes/UI/inventory_ui.tscn" id="6_0u5uq"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_tugb3"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_uvnfx"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_a3d8c"]
height = 1.4984375

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_xpcdj"]
height = 1.0

[node name="Player" type="CharacterBody3D" groups=["Player"]]
script = ExtResource("1_a3d8c")

[node name="Inventory" type="Node" parent="."]
script = ExtResource("2_dd0ac")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]

[node name="WeaponHolder" type="Node3D" parent="Head/Camera3D"]

[node name="Blaster" parent="Head/Camera3D/WeaponHolder" instance=ExtResource("3_jlvik")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, -0.4, -0.7)
fire_rate = 0.5

[node name="InteractRay" type="RayCast3D" parent="Head/Camera3D"]
target_position = Vector3(0, 0, -1.2)

[node name="Flashlight" type="SpotLight3D" parent="Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.4, -0.5)
light_energy = 10.0
light_projector = ExtResource("1_uvnfx")
shadow_enabled = true
spot_range = 50.0
spot_angle = 38.0

[node name="Flashlight_audio" type="AudioStreamPlayer3D" parent="Head/Camera3D/Flashlight"]
stream = ExtResource("3_htcer")
volume_db = -45.549

[node name="AimRay" type="RayCast3D" parent="Head/Camera3D" groups=["Player"]]
target_position = Vector3(0, 0, -100)

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_tugb3")

[node name="StandingCollisionShape" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_uvnfx")

[node name="CrouchingCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25078124, 0)
shape = SubResource("CapsuleShape3D_a3d8c")

[node name="ProneCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
shape = SubResource("CapsuleShape3D_xpcdj")

[node name="StandRay" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
target_position = Vector3(0, 2.05, 0)

[node name="CrouchRay" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
target_position = Vector3(0, 1.5, 0)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="CanvasLayer" instance=ExtResource("3_xpcdj")]

[node name="InventoryUI" parent="CanvasLayer" instance=ExtResource("6_0u5uq")]
visible = false

[node name="Footstep_audio" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
stream = ExtResource("4_mtuoh")
